# RLM_retrieval_test

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/rlm/: __init__.py  types.py
backend/rlm/api/: __init__.py
backend/rlm/api/routes/: __init__.py  documents.py  hybrid.py  queries.py  session_websocket.py  sessions.py  stats.py  trajectory.py  websocket.py
backend/rlm/config/: __init__.py  settings.py
backend/rlm/core/: __init__.py  exceptions.py  orchestrator.py  recursion.py
backend/rlm/documents/: __init__.py  chunking.py  cleaning.py  format_detector.py  ingestion.py  metadata.py  models.py  progress.py  storage.py
backend/rlm/documents/parsers/: __init__.py  archive_code_parsers.py  base.py  office_parsers.py  pdf_parsers.py  registry.py  text_parser.py  unstructured_parser.py  web_data_parsers.py
backend/rlm/hybrid/: __init__.py  advanced_strategy.py  chunk_selector.py  citation_manager.py  reranker.py  search_engines.py
backend/rlm/llm/: __init__.py  batch_manager.py  cache.py  circuit_breaker.py  client.py  connection_pool.py  cost_tracker.py  enhanced_client.py  interface.py  model_registry.py  partial_failure_handler.py  prompts.py  query_batcher.py  rate_limiter.py  session_cache.py  streaming_aggregator.py  sub_llm_manager.py
backend/rlm/routing/: __init__.py  analyzer.py  cost_estimator.py  models.py  optimizer.py  query_router.py  rag_engine.py  strategies.py
backend/rlm/sandbox/: __init__.py  base.py  docker_repl.py  factory.py  local_repl.py  monitor.py  security.py  utils.py
backend/rlm/session/: __init__.py  cleanup.py  compactor.py  export.py  manager.py  models.py  token_manager.py  types.py  websocket.py
backend/rlm/session/integration/: __init__.py  citation_tracker.py  history_logger.py  search_enhancer.py
backend/rlm/trajectory/: __init__.py  exporter.py  logger.py  processor.py  websocket_manager.py
backend/tests/: test_core.py  test_docker_sandbox.py  test_hybrid_rag.py  test_ingestion.py  test_llm_client.py  test_routing.py  test_session_manager.py  test_sub_llm_manager.py
examples/: basic_usage.py  docker_sandbox_usage.py  hybrid_rag_usage.py  session_advanced_features.py  session_management_examples.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  documents.ts  queries.ts  sessions.ts  stats.ts
frontend/src/components/costs/: CostDashboard.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/query/: QueryInterface.tsx
frontend/src/components/settings/: SettingsPanel.tsx
frontend/src/components/trajectory/: CodeInspector.tsx  CostAnalysis.tsx  ExportPanel.tsx  LiveIndicator.tsx  NodeDetails.tsx  SessionInput.tsx  TimelineView.tsx  TrajectoryNode.tsx  TrajectoryViewer.tsx  TreeView.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  slot.tsx
frontend/src/components/upload/: DocumentUpload.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/stores/: appStore.ts  documentStore.ts  queryStore.ts  trajectoryStore.ts
frontend/src/types/: trajectory.ts
scripts/: setup-uv.sh
